--- a/Modulo 2 - HTML5 e CSS3/guia2.html
+++ b/Modulo 2 - HTML5 e CSS3/guia2.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="guia2.css">
     <title>Guia Turistico V2</title>
 </head>
+
 <body>
     <div class="container">
         <div class="topo">
             <h1>Guia Turistico V2</h1>
+        </div>
+        <div class="menuMobile">
+            <img src="auxiliares/open-menu.png">Menu
         </div>
         <div class="menu">
             <ul>
@@ -19,13 +24,23 @@
                 <li>Link 4</li>
             </ul>
         </div>
+
         <div class="corpo">
             <h2>Titulo matéria</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>    
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+                into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
+                release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
+                software like Aldus PageMaker including versions of Lorem Ipsum.</p>
         </div>
-        <div class="bannerDireita">
-            
+
+        <div class="bannerDireita"></div>
+
+        <div class="rodape">
+            Todos os direitos reservados | Luan Teixeira
         </div>
     </div>
 </body>
+
 </html>
