--- a/Modulo 2 - HTML5 e CSS3/guia2.html
+++ b/Modulo 2 - HTML5 e CSS3/guia2.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta id="viewport" name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="guia2.css">
     <title>Guia Turistico V2</title>
 </head>
