--- a/Modulo 2 - HTML5 e CSS3/index.html
+++ b/Modulo 2 - HTML5 e CSS3/index.html
@@ -4,6 +4,8 @@
 <head>
     <title>Modulo 2 - HTML5 e CSS3</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -103,6 +105,25 @@
             media query para responsividade
         </p>
     </div><br/><br/>
+    
+    <h1>Bordas aredondadas</h1>
+    <div class="borda1">Exemplo 1</div>
+    <div class="borda2">Exemplo 2</div>
+    <div class="borda3">Exemplo 3</div>
+    <div class="borda4">Exemplo 4</div>
+    <div class="borda5">Exemplo 5</div>
+
+    <h1>Degrade</h1>
+    <div class="degrade">
+        Teste de degrade
+    </div>
+
+    <h1>Sombras</h1>
+    <h2>Elementos</h2>
+    <div class="bsombra">
+        Sombra em elementos
+    </div>
+    <p class="tSombra">Sombra em textos</p>
 
 
     <script src="main.js"></script>
