--- a/Modulo 2 - HTML5 e CSS3/login.html
+++ b/Modulo 2 - HTML5 e CSS3/login.html
@@ -19,6 +19,7 @@
         <input type="submit" value="Enviar" name="enviar" id="enviar">
         <input type="reset" value="Limpar">
     </form>
+    <div class="teste"></div>
 
 </body>
 
