--- a/Modulo 2 - HTML5 e CSS3/html/index.html
+++ b/Modulo 2 - HTML5 e CSS3/html/index.html
@@ -5,8 +5,8 @@
     <title>Modulo 2 - HTML5 e CSS3</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -125,6 +125,8 @@
     </div>
     <p class="tSombra">Sombra em textos</p>
 
+    <h1>Transições</h1>
+<div class="transicao">teste</div>
 
     <script src="main.js"></script>
 </body>
