LUAN: aula dia 01/07/2020

--- a/Modulo 2 - HTML5 e CSS3/Projeto_portal/index.html
+++ b/Modulo 2 - HTML5 e CSS3/Projeto_portal/index.html
@@ -18,7 +18,13 @@
                 </ul>
             </div>
             <div class="topoDireita">
-                Barra de pesquisa e redes sociais
+                <a href=""><img src="assets/images/facebook.png" width="28px" height="28px" /></a>
+                <a href=""><img src="assets/images/googleplus.png" width="28px" height="28px" /></a>
+                <a href=""><img src="assets/images/twitter.png" width="28px" height="28px" /></a>
+                <a href=""><img src="assets/images/youtube.png" width="28px" height="28px" /></a>
+                <a href=""><img src="assets/images/rss.png" width="28px" height="28px" /></a>
+                <input type="text" name="burcar" id="buscar" placeholder="Buscar..." />
+                <a href=""><img src="assets/images/lupa.png" width="28px" height="28px" /></a>
             </div>
         </div>
     </div>
