LUAN: aula dia 03/07/2020

--- a/Modulo 2 - HTML5 e CSS3/Projeto_portal/index.html
+++ b/Modulo 2 - HTML5 e CSS3/Projeto_portal/index.html
@@ -18,13 +18,13 @@
                 </ul>
             </div>
             <div class="topoDireita">
-                <a href=""><img src="assets/images/facebook.png" width="28px" height="28px" /></a>
-                <a href=""><img src="assets/images/googleplus.png" width="28px" height="28px" /></a>
-                <a href=""><img src="assets/images/twitter.png" width="28px" height="28px" /></a>
-                <a href=""><img src="assets/images/youtube.png" width="28px" height="28px" /></a>
-                <a href=""><img src="assets/images/rss.png" width="28px" height="28px" /></a>
+                <a href=""><img src="assets/images/lupa.png" width="26px" height="26px" /></a>
                 <input type="text" name="burcar" id="buscar" placeholder="Buscar..." />
-                <a href=""><img src="assets/images/lupa.png" width="28px" height="28px" /></a>
+                <a href=""><img src="assets/images/youtube.png" width="26px" height="26px" /></a>
+                <a href=""><img src="assets/images/twitter.png" width="26px" height="26px" /></a>
+                <a href=""><img src="assets/images/facebook.png" width="26px" height="26px" /></a>
+                <a href=""><img src="assets/images/googleplus.png" width="26px" height="26px" /></a>
+                <a href=""><img src="assets/images/rss.png" width="26px" height="26px" /></a>
             </div>
         </div>
     </div>
@@ -32,16 +32,48 @@
     <div class=topoPublicidade>
         <div class="topoPublicidadeConteudo">
             <div class="logo">
-                Logo
+                <img src="assets/images/logo.png" width="230px"/>
             </div>
-            <div class="publi">
-                Publicidade
+            <div class="banner">
             </div>
         </div>
     </div>
 
     <div class="menu">
-        Menu principal
+        <div class="menuConteudo">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Economia</a></li>
+                <li>
+                    <a href="">Entreterimento<img src="assets/images/arrowdown.png" width="10px" border=0/></a>
+                    <div class="subMenu">
+                        <a href=""><div class="subMenuItem">Item 1</div></a>
+                        <a href=""><div class="subMenuItem">Item 2</div></a>
+                        <a href=""><div class="subMenuItem">Item 3</div></a>
+                        <a href=""><div class="subMenuItem">Item 4</div></a>
+                        <a href=""><div class="subMenuItem">Item 5</div></a>
+                    </div>
+                </li>
+                <li>
+                    <a href="">Esportes<img src="assets/images/arrowdown.png" width="10px" border=0/></a>
+                    <div class="subMenu">
+                        <a href=""><div class="subMenuItem">Item 1</div></a>
+                        <a href=""><div class="subMenuItem">Item 4</div></a>
+                        <a href=""><div class="subMenuItem">Item 5</div></a>
+                    </div>
+                </li>
+                <li><a href="">Geral</a></li>
+                <li>
+                    <a href="">Notícias<img src="assets/images/arrowdown.png" width="10px" border=0/></a>
+                    <div class="subMenu">
+                        <a href=""><div class="subMenuItem">Item 1</div></a>
+                        <a href=""><div class="subMenuItem">Item 2</div></a>
+                    </div>
+                </li>
+                <li><a href="">Polícia</a></li>
+                <li><a href="">Vídeos</a></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
