--- a/Modulo 2 - HTML5 e CSS3/Projeto_portal/index.html
+++ b/Modulo 2 - HTML5 e CSS3/Projeto_portal/index.html
@@ -75,5 +75,71 @@
             </ul>
         </div>
     </div>
+    <div class="ultimasNoticias">
+        <div class="ultimasNoticasInt">
+            <div class="ultimasNoticiasConteudo">
+                <div class="ultimasNoticiasTitulo">
+                    ÚLTIMAS NOTÍCIAS
+                </div>
+                <div class="ultimasNoticiasTexto">
+                    Ultima noticia que aconteceu mais recentemente dos ultimos tempos
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="conteudoDireita">
+            <div class="widget">
+                <div class="widgetTitulo">
+                    Últimas notícias
+                </div>
+                <div class="widgetConteudo">
+                    <div class="noticiaItem">
+                        <a href="./">materia com mais de uma linha para poder testar o widgets de ultimas noticias</a>
+                    </div>
+                    <div class="noticiaItem">
+                        <a href="./">materia com mais de uma linha para poder testar o widgets de ultimas noticias</a>
+                    </div>
+                    <div class="noticiaItem">
+                        <a href="./">materia com mais de uma linha para poder testar o widgets de ultimas noticias</a>
+                    </div>
+                    <div class="noticiaItem">
+                        <a href="./">materia com mais de uma linha para poder testar o widgets de ultimas noticias</a>
+                    </div>
+                </div>
+            </div>
+            <div class="widget">
+                <div class="widgetTitulo">
+                    Sociais
+                </div>
+                <div class="widgetConteudo">
+                    <a href=""><img src="assets/images/youtube.png" width="26px" height="26px" /></a>
+                    <a href=""><img src="assets/images/twitter.png" width="26px" height="26px" /></a>
+                    <a href=""><img src="assets/images/facebook.png" width="26px" height="26px" /></a>
+                    <a href=""><img src="assets/images/googleplus.png" width="26px" height="26px" /></a>
+                    <a href=""><img src="assets/images/rss.png" width="26px" height="26px" /></a>
+                </div>
+            </div>
+            <div class="widget">
+                <div class="widgetTitulo">
+                    Publicidade
+                </div>
+                <div class="widgetConteudo">
+                    <a href="./"><img src="assets/images/banner.jpg" width="270"></a>
+                </div>
+            </div>
+            <div class="widget">
+                <div class="widgetTitulo">
+                    Encontre-nos no Facebook
+                </div>
+                <div class="widgetConteudo">
+                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fweb.facebook.com%2FB7Web%2F&tabs&width=270&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="270" height="214" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
+        </div>
+        <div class="conteudoEsquerda">
+
+        </div>
+    </div>
 </body>
 </html>
