LUAN: aula dia 21/07/2020

--- a/Modulo 2 - HTML5 e CSS3/Projeto_portal/index.html
+++ b/Modulo 2 - HTML5 e CSS3/Projeto_portal/index.html
@@ -137,8 +137,12 @@
                 </div>
             </div>
         </div>
-        <div class="conteudoEsquerda">
-
+        <div class="slideshow" id="slideshow">
+            <div class="slideshowarea">
+                <div class="slide" style="background-image:url('http://www.google.com.br/google.jpg')">
+                    
+                </div>
+            </div>
         </div>
     </div>
 </body>
