LUAN: aula dia 22/07/2020.

--- a/Modulo 2 - HTML5 e CSS3/Projeto_portal/index.html
+++ b/Modulo 2 - HTML5 e CSS3/Projeto_portal/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=width-device">
     <title>Projeto modulo 2 - Portal</title>
     <link rel="stylesheet" href="assets/CSS/style.css">
+    <script type="text/javascript" src="assets/JS/script.js"></script>
 </head>
 <body>
     <div class="topo">
@@ -138,9 +139,36 @@
             </div>
         </div>
         <div class="slideshow" id="slideshow">
+            <div class="slidebolinhas">
+                <div class="bolinhas" onclick="mudarSlide(0)"></div>
+                <div class="bolinhas" onclick="mudarSlide(1)"></div>
+                <div class="bolinhas" onclick="mudarSlide(2)"></div>
+                <div class="bolinhas" onclick="mudarSlide(3)"></div>
+            </div>
             <div class="slideshowarea">
                 <div class="slide" style="background-image:url('http://www.google.com.br/google.jpg')">
-                    
+                    <div class="slideinfo">
+                        <div class="slideinfotitulo">Título de teste</div>
+                        <div class="slideinfosubtitulo">Subtítulo de teste</div>
+                    </div>             
+                </div>
+                <div class="slide" style="background-image:url('http://www.google.com.br/google.jpg')">
+                    <div class="slideinfo">
+                        <div class="slideinfotitulo">Título de teste 2 </div>
+                        <div class="slideinfosubtitulo">Subtítulo de teste 2</div>
+                    </div>             
+                </div>
+                <div class="slide" style="background-image:url('http://www.google.com.br/google.jpg')">
+                    <div class="slideinfo">
+                        <div class="slideinfotitulo">Título de teste 3 </div>
+                        <div class="slideinfosubtitulo">Subtítulo de teste 3</div>
+                    </div>             
+                </div>
+                <div class="slide" style="background-image:url('http://www.google.com.br/google.jpg')">
+                    <div class="slideinfo">
+                        <div class="slideinfotitulo">Título de teste 4 </div>
+                        <div class="slideinfosubtitulo">Subtítulo de teste 4</div>
+                    </div>             
                 </div>
             </div>
         </div>
